--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www", 
+    "start": "node ./bin/www",
     "dev": "supervisor ./bin/www"
   },
   "dependencies": {
@@ -12,6 +12,8 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
-    "pug": "2.0.0-beta11"
+    "mysql2": "^3.6.1",
+    "pug": "2.0.0-beta11",
+    "sequelize": "^6.33.0"
   }
 }
