--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www", 
+    "start": "node ./bin/www",
     "dev": "supervisor ./bin/www"
   },
   "dependencies": {
@@ -11,6 +11,7 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "mongoose": "^7.6.3",
     "morgan": "~1.9.1",
     "pug": "2.0.0-beta11"
   }
