--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "mongoose": "^7.6.3",
+    "mongoose-paginate-v2": "^1.7.4",
     "morgan": "~1.9.1",
     "pug": "2.0.0-beta11"
   }
